fix: dark mode in my listings collection

--- a/src/Assets/styles/override.scss
+++ b/src/Assets/styles/override.scss
@@ -559,3 +559,7 @@ canvas {
         }
     }
 }
+
+.my-listing-card {
+    background: $bgColor1;
+}
